--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
   </header>
   <div class="divider"></div>
   <main>
-
+    <div>
+      <ul id="menu" class="menu menu-horizontal w-full">
+        <li><a>Home</a></li>
+      </ul>
+    </div>
   </main>
   <script src="js/index.js"></script>
 </body>
