card added by JS

--- a/index.html
+++ b/index.html
@@ -37,31 +37,40 @@
   <div class="divider"></div>
   <main>
     <div>
-      <ul id="menu" class="menu menu-horizontal w-full">
+      <ul id="menu" class="menu menu-horizontal">
         <li><a>Home</a></li>
       </ul>
     </div>
-    <div>
-      <div class="form-control my-8">
-        <input type="text" class="input input-bordered" />
-      </div>
-    </div>
+    <div class="divider mb-12"></div>
     <div id="news-cards">
       <!-- <div class="card card-side bg-base-100 shadow-xl bg-white">
         <div>
-          <figure class="p-3"><img src="https://placeimg.com/200/280/arch" class="rounded-2xl" alt="Movie"></figure>
+          <figure><img src="https://placeimg.com/200/280/arch" class="rounded-2xl p-3" alt="Movie"></figure>
         </div>
         <div class="card-body">
-          <h2 class="card-title text-black font-bold text-3xl	">The best fashion influencers to follow for sartorial
+          <h1 class="card-title text-black font-bold text-3xl">The best fashion influencers to follow for sartorial
             inspiration
-          </h2>
+          </h1>
           <p>From our favourite UK influencers to the best missives from Milan and the coolest New Yorkers, read on some
             of the
             best fashion blogs out there, and for even more inspiration, do head to our separate black fashion
             influencer
             roundup.</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">Watch</button>
+          <div class="grid gap-4 grid-cols-3 items-center">
+            <div>
+              <label tabindex="0" class="avatar">
+                <div class="w-10 rounded-full mr-2">
+                  <img src="./images/275510778_333156488862480_5639544226919285043_n.jpg" />
+                </div>
+                <h3 class="card-title text-black font-medium text-xl">Name</h3>
+              </label>
+            </div>
+            <div>
+              <p class="text-black font-medium">1.5M</p>
+            </div>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">Detail</button>
+            </div>
           </div>
         </div>
       </div> -->
