--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Assignment 6</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    #ellipsis {
+      text-overflow: ellipsis;
+    }
+  </style>
 
 </head>
 
@@ -75,6 +80,17 @@
         </div>
       </div> -->
     </div>
+
+    <section>
+      <!-- The button to open modal -->
+
+
+      <!-- Put this part before </body> tag -->
+      <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+      <div id="news-details" class="modal">
+      </div>
+    </section>
+
   </main>
   <script src="js/index.js"></script>
 </body>
